# Ace-chip8-Emulator

./: Cargo.toml  ReadMe.md
config/: config.ini
src/: chip8.rs  config.rs  cpu.rs  keyboard.rs  memory.rs
src/backend/opengl/: mesh.rs  mod.rs  shader.rs  window.rs
src/frontend/: ace_cli.rs
